--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap.min.js": "^3.3.5",
+    "jquery": "^3.5.1",
     "jump.js": "^1.0.2",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {},
   "description": ""
