--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "q",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "dev": "parcel index.html index1.html addition.json",
+    "build": "parcel build index.html index1.html addition.json"
   },
   "directories": {
     "doc": "doc"
