--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "dev": "parcel index.html index1.html addition.json",
-    "build": "parcel build index.html index1.html addition.json"
+    "dev": "parcel src/index.html src/index1.html src/addition.json",
+    "build": "parcel build src/index.html src/index1.html src/addition.json"
   },
   "directories": {
     "doc": "doc"
