--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "q",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.html",
   "scripts": {
     "dev": "parcel index.html index1.html addition.json",
     "build": "parcel build index.html index1.html addition.json"
